--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -6,4 +6,50 @@
     android:layout_height="match_parent"
     tools:context=".Activity.TestActivity">
 
+    <TextView
+        android:id="@+id/test_textview_1"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/test_textview_2"
+
+        app:layout_constraintVertical_chainStyle="packed"
+        />
+    <TextView
+        android:id="@+id/test_textview_2"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/test_textview_1"
+        app:layout_constraintBottom_toTopOf="@id/test_textview_3"
+
+        />
+    <TextView
+        android:id="@+id/test_textview_3"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/test_textview_2"
+        app:layout_constraintBottom_toTopOf="@id/test_textview_4"
+
+        />
+    <TextView
+        android:id="@+id/test_textview_4"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/test_textview_3"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        />
+
 </android.support.constraint.ConstraintLayout>
